# open-controller-freecad

./: .gitignore  AGENTS.md  CHANGELOG.md  InitGui.py  MANIFEST.in  README.md  README.md.bak  RELEASE_NOTES_v0.1.md  pyproject.toml
docs/: ARCHITECTURE_FREECAD_WORKBENCH.md  architecture.md  development.md  plugin-installation.md  release-checklist.md  roadmap.md  service-architecture.md  template-schema.md  ui_visual_language.md  user-guide.md  workbench.md  workflows.md
docs/architecture/: BIKE_TRAILER_PLUGIN_PROOF.md  COMMAND_MODEL.md  COMPONENT_MODEL.md  CORE_NAMING_CLEANUP.md
docs/ui/: FEATURE_IMPROVEMENT_REVIEW.md  INTERACTION_REVIEW.md  PLUGIN_SELECTION_UX.md  WORKBENCH_INTERACTION_REVIEW.md
docs/workflows/: midicontroller_layout_intelligence.md  midicontroller_quickstart.md
examples/: geometry_v1.py
examples/projects/: encoder_module_demo.yaml  fader_strip_demo.yaml  full_controller_demo.yaml  pad_grid_demo.yaml
examples/simple-controller/: controller.hw.yaml
ocf_freecad/: init_gui.py  workbench.py
ocf_freecad/commands/: add_component.py  apply_layout.py  auto_layout.py  base.py  create_controller.py  create_from_schema.py  create_from_template.py  disable_plugin.py  enable_plugin.py  move_component.py  open_plugin_manager.py  reload_plugins.py  select_component.py  validate_constraints.py  validate_layout.py  validate_project.py
ocf_freecad/constraints/: __init__.py  ergonomics.py  models.py  report.py  rules.py  validator.py
ocf_freecad/domain/: component.py  controller.py
ocf_freecad/exporters/: __init__.py  assembly_exporter.py  bom_exporter.py  electrical_exporter.py  manufacturing_exporter.py
ocf_freecad/freecad_api/: __init__.py  document.py  gui.py  metadata.py  model.py  objects.py  shapes.py  state.py
ocf_freecad/generator/: component_resolver.py  controller_builder.py  electrical_mapper.py  electrical_resolver.py
ocf_freecad/geometry/: __init__.py  normalize.py  planar.py  primitives.py
ocf_freecad/gui/: __init__.py  docking.py  runtime.py
ocw_workbench/: __init__.py  workbench.py
scripts/: build_release_assets.py  run_quality_smoke.py  run_smoke_tests.py
(+217 files in other folders)
