[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocf-freecad"
version = "0.1.0"
description = "FreeCAD Workbench for modular MIDI controller design"
authors = [{ name = "huckle lab" }]
readme = "README.md"
dependencies = [
    "pyyaml"
]

[tool.setuptools]
include-package-data = true
py-modules = ["Init", "InitGui", "ocf_kicad_plugin"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ocf_freecad*", "ocf_kicad*"]

[tool.setuptools.package-data]
ocf_freecad = [
    "library/components/*.yaml",
    "plugins/internal/**/*.yaml",
    "templates/library/*.yaml",
    "variants/library/*.yaml",
]

ocf_kicad = []
