[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocw-workbench"
version = "0.1.0"
description = "FreeCAD Workbench for modular MIDI controller design"
authors = [{ name = "huckle lab" }]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["freecad", "midi", "controller", "cad", "hardware"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
    "Topic :: Scientific/Engineering",
]
urls = { Repository = "https://github.com/161sam/open-controller-workbench" }
dependencies = [
    "pyyaml"
]

[tool.setuptools]
include-package-data = true
py-modules = ["Init", "InitGui", "ocw_kicad_plugin"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ocw_workbench*", "ocw_kicad*"]

[tool.setuptools.package-data]
ocw_workbench = [
    "library/components/*.yaml",
    "plugins/internal/**/*.yaml",
    "templates/library/*.yaml",
    "variants/library/*.yaml",
]

ocw_kicad = []

[tool.setuptools.data-files]
"resources/icons" = ["resources/icons/*.svg"]
"resources/icons/components" = ["resources/icons/components/*.svg"]
